[package]
name = "shared-library-builder"
version = "0.1.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
fs_extra = "1.2"
rustc_version = "0.2"
url = "2.2.2"
which = "4.1.0"
user-error = "1.2.8"
cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255" }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
downloader = "0.2.6"
file-matcher = "0.6.0"
pkg-config = "0.3"
to_absolute = "0.1"