[package]
name = "shared-library-builder"
version = "0.3.8"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
fs_extra = "1.2"
rustc_version = "0.2"
which = "4.1.0"
user-error = "1.2.8"
file-matcher = "0.7"
to_absolute = "0.1"
clap = {version = "3.2", features = [ "derive", "color" ] }
cmake = { git = "https://github.com/syrel/cmake-rs", rev = "cce9d58d87bd5dd95afb9183fdbbf4cb5d4b2255", optional = true }
pkg-config = { version = "0.3", optional = true }
downloader = { version = "0.2.6", optional = true }
url = { version = "2.2.2", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
xz2 = { version = "0.1", optional = true }
zip = { version = "0.5", optional = true }
zip-extensions = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
typetag = "0.1"

[dev-dependencies]
serde_json = "1.0"

[features]
cmake-library = [ "cmake", "pkg-config" ]
git-location = ["url", "downloader"]
zip-location = ["zip", "zip-extensions", "url", "downloader"]
tar-location = ["tar", "flate2", "xz2", "url", "downloader"]

[profile.test]
opt-level = 3

[profile.dev]
lto = true